<resources>
    <string name="app_name">POS Client</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="username">Client \u0020</string>
    <string name="invoiceemail">Table \u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020  </string>
    <string name="invoicetimein">Time In    \u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020  </string>
    <string name="invoicetimeout">Time Out   \u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020  </string>
    <string name="titleinvoice">REPORT LIST OF ITEMS</string>
    <string name="invoiceaddress">Address  \u0020\u0020</string>
    <string name="invoicephone">Phone  \u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020</string>
    <string name="table_map_menu">Table Map</string>
    <string name="invoice_menu">Invoice</string>
    <string name="setting_menu">Settings</string>
    <string name="strackingmap">GoogleMap</string>
    <string name="login_out">Sign In</string>
    <string name="btnConnectIPAddress">Connect</string>
    <string name="btnCancelIPAddress">Cancel</string>
    <string name="inv_destroy">Destroy</string>
    <string name="inv_addnew">New</string>
    <string name="inv_calculator">Calculator</string>
    <string name="inv_freetable">Free</string>
    <string name="CompanyName">CÔNG TY TNHH MỘT THÀNH VIÊN CÔNG NGHỆ VÀ TRUYỀN THÔNG 3I</string>
    <string name="CompanyAaddress">Địa chỉ: Nhà B1-4 Khu đô thị Hạ Đình - Thanh Xuân - Hà Nội</string>
    <string name="CompanyPhone">Điện thoại: 04. 6292 6186 \t\t 04.6285 0844  \n\t\t\t 04.2214 6285 \t\t 04.6285 0842</string>
    <string name="CompanyFax">Fax: 04 6285 0843</string>
    <string name="CompanyEmail">Email: info@3i.com.vn</string>
    <string name="CompanyNote">© Bản quyền thuộc Công ty TNHH Một Thành Viên Công Nghệ và Truyền Thông 3I</string>
    <string name="convertTo">Convert To\n>></string>
    <string name="Unit">Unit : </string>
    <string name="Result">Result : </string>
    <string name="Convert">Convert</string>
    <string name="Cancel">Cancel</string>
    <string name="floor1">F1  </string>
    <string name="floor2">F2  </string>
    <string name="floor3">F3 </string>
    <string name="floor4">F4 </string>
    <string name="prefDefault_alerts_vibrateWhen">sdksdkjsjkd</string>
    <string name="tardis">abc</string>
    <string name="preferences_week_start_day_default">start day default</string>
    <string name="preferences_home_tz_default">sdfâc,sd</string>
    <string-array name="preferences_week_start_day_values">
        <item>fhjs</item>
        <item>dbsdfl</item>
        <item>dsbfsdf</item>
        <item>oek</item>
    </string-array>
    <string-array name="timezone_values">
        <item>dnsfnsdf</item>
        <item>đsfsdf</item>
        <item>dhdhd</item>
        <item>sekn</item>
    </string-array>
    <string-array name="preferences_default_reminder_values">
        <item>sfs,dfsd,</item>
        <item>kldgd</item>
        <item>fskdfjklsd</item>
        <item>sdfsdfs</item>
        <item>kldgd</item>
    </string-array>
    <string-array name="prefValues_alerts_vibrateWhen">
        <item>skjsjksg</item>
        <item>sđksds</item>
        <item>jfgdf</item>
        <item>aểtr</item>
        <item>skjsjksg</item>
    </string-array>
    <string-array name="buttons" translatable="true">
        <item>@+id/clear</item>
        <item>@+id/del</item>
        <item>@+id/sin</item>
        <item>@+id/ln</item>
        <item>@+id/cos</item>
        <item>@+id/lg</item>
        <item>@+id/tan</item>
        <item>@+id/e</item>
        <item>@+id/pi</item>
        <item>@+id/power</item>
        <item>@+id/factorial</item>
        <item>@+id/sqrt</item>
        <item>@+id/digit7</item>
        <item>@+id/digit8</item>
        <item>@+id/digit9</item>
        <item>@+id/div</item>
        <item>@+id/leftParen</item>
        <item>@+id/digit4</item>
        <item>@+id/digit5</item>
        <item>@+id/digit6</item>
        <item>@+id/mul</item>
        <item>@+id/rightParen</item>
        <item>@+id/digit1</item>
        <item>@+id/digit2</item>
        <item>@+id/digit3</item>
        <item>@+id/minus</item>
        <item>@+id/digit0</item>
        <item>@+id/dot</item>
        <item>@+id/plus</item>
        <item>@+id/equal</item>
    </string-array>
    <string-array name="simple_buttons">
        <item>@+id/digit7</item>
        <item>@+id/digit8</item>
        <item>@+id/digit8</item>
        <item>@+id/leftParen</item>
        <item>@+id/rightParen</item>
        <item>@+id/mul</item>
        <item>@+id/digit4</item>
        <item>@+id/digit5</item>
        <item>@+id/digit6</item>
        <item>@+id/dot</item>
        <item>@+id/div</item>
        <item>@+id/minus</item>
        <item>@+id/digit1</item>
        <item>@+id/digit2</item>
        <item>@+id/digit3</item>
        <item>@+id/digit0</item>
        <item>@+id/equal</item>
        <item>@+id/plus</item>
    </string-array>
    <string-array name="advanced_buttons">
        <item>@+id/advanced</item>
        <item>@+id/cos</item>
        <item>@+id/tan</item>
        <item>@+id/pi</item>
        <item>@+id/factorial</item>
        <item>@+id/ln</item>
        <item>@+id/lg</item>
        <item>@+id/e</item>
        <item>@+id/power</item>
        <item>@+id/sqrt</item>
    </string-array>
    <string name="error">Error</string>
    <string name="digit0">0</string>
    <string name="digit1">1</string>
    <string name="digit2">2</string>
    <string name="digit3">3</string>
    <string name="digit4">4</string>
    <string name="digit5">5</string>
    <string name="digit6">6</string>
    <string name="digit7">7</string>
    <string name="digit8">8</string>
    <string name="digit9">9</string>
    <string name="del">DELETE</string>
    <string name="clear">CLR</string>
    <string name="div">\u00f7</string>
    <string name="mul">\u00d7</string>
    <string name="plus">+</string>
    <string name="minus">\u2212</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="enter">\u2193</string>
    <string name="sin">sin</string>
    <string name="sin_mathematical_value" translate="false">sin</string>
    <string name="cos">cos</string>
    <string name="cos_mathematical_value" translate="false">cos</string>
    <string name="tan">tan</string>
    <string name="tan_mathematical_value" translate="false">tan</string>
    <string name="pi">\u03c0</string>
    <string name="e">e</string>
    <string name="e_mathematical_value" translate="false">e</string>
    <string name="ln">ln</string>
    <string name="ln_mathematical_value" translate="false">ln</string>
    <string name="lg">log</string>
    <string name="lg_mathematical_value" translate="false">lg</string>
    <string name="leftParen">(</string>
    <string name="rightParen">)</string>
    <string name="sqrt">\u221a</string>
    <string name="power">^</string>
    <string name="factorial">!</string>
    <string name="basic">Basic panel</string>
    <string name="advanced">Advanced panel</string>
    <string name="clear_history">Clear history</string>
    <string name="finish">Finish</string>
    <string name="text_copied_toast">Text copied.</string>
    <string name="leftParenDesc">left parenthesis</string>
    <string name="rightParenDesc">right parenthesis</string>
    <string name="factorialDesc">factorial</string>
    <string name="lnDesc">natural logarithm</string>
    <string name="lgDesc">logarithm</string>
    <string name="sqrtDesc">square root</string>
    <string name="divDesc">divide</string>
    <string name="mulDesc">multiply</string>
    <string name="plusDesc">plus</string>
    <string name="minusDesc">minus</string>
    <string name="dotDesc">point</string>
    <string name="powerDesc">power</string>
    <string name="delDesc">delete</string>
    <string name="clearDesc">clear</string>
    <string name="tanDesc">tangent</string>
    <string name="sinDesc">sine</string>
    <string name="cosDesc">cosine</string>
    <string name="eDesc">Euler\'s number</string>
    <string name="piDesc">pi</string>
    <string name="equalDesc">equals</string>
    <string-array name="operators" translatable="false">
        <item>(</item>
        <item>)</item>
        <item>!</item>
        <item>ln</item>
        <item>log</item>
        <item>\u221a</item>
        <item>\u00f7</item>
        <item>\u00d7</item>
        <item>+</item>
        <item>\u2212</item>
        <item>.</item>
        <item>^</item>
        <item>tan</item>
        <item>sin</item>
        <item>cos</item>
        <item>\u03c0</item>
        <item>=</item>
    </string-array>
    <string-array name="operatorDescs">

        
        <item>left parenthesis</item>
        
        <item>right parenthesis</item>
        
        <item>factorial</item>
        
        <item>natural logarithm</item>
        
        <item>logarithm</item>
        
        <item>square root</item>
        
        <item>divided by</item>
        
        <item>multiplied by</item>
        
        <item>plus</item>
        
        <item>minus</item>
        
        <item>&#160;point&#160;</item>
        
        <item>power</item>
        
        <item>tangent</item>
        
        <item>sine</item>
        
        <item>cosine</item>
        
        <item>pi</item>
        
        <item>equals</item>
    </string-array>
    <string name="refresh">Làm Mới</string>
    <string name="btnAddnew">Thêm Mới</string>
    <string name="btnBackPage">Back</string>
    <string name="btnNextPage">Next</string>
    <string name="btntextThanhToan">Thanh Toán</string>
    <string-array name="spnVat">
       <item>0</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
    </string-array>
    <string-array name="spnComposition">
        <item>0</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
    </string-array>
    <string name="tvHoaDonThanhToan">INVOICES OF PAYMENT</string>
    <string name="tvHoaDonUser">"CUSTOMER NAME: "</string>
    <string name="tvHoaDonDiaChi">"ADDRESS: "</string>
    <string name="tvHoaDonSDT">"PHONE NUMBER: "</string>
    <string name="tvHoaDonTitle">"EATEN FOODS "</string>
    <string name="titleTableUsing">Using Table</string>
    <string name="titleTableEmpty">Empty Table</string>
    <string name="titleTableOoccupy">Occupy Table</string>
    <string name="addinvdetailtitle">You dont add anny item !</string>
    <string name="addinvdetailmsg">Do you want to exits ?!</string>
    <string name="tvTitleComment">Please add comment!</string>
    <string name="inv_commition"> Commition</string>
    <string name="inv_total"> Total</string>
    <string name="inv_Viewer">Join</string>
    <string name="inv_split">Split</string>
    <string name="titleTachban">Please Select</string>
    <string name="OK">Ok</string>
    <string name="transferItem">Transfer item</string>
    <string name="inv_add_ChooseTable">Choose table</string>
    <string name="inv_add_Inv">Add</string>
    <string name="invoice_add_hint_client">client</string>
    <string name="invoice_add_hint_Time_in">time in</string>
    <string name="invoice_add_hint_Time_out">time out</string>
    <string name="food">Food</string>
    <string name="drinks">Wine</string>
    <string name="coffe">Vegetables</string>
    <string name="report_btn1">Report Revenue</string>
    <string name="report_btn2">Report Income</string>
    <string name="report_btn3">Report Items</string>
    <string name="report_txtselect">Select date:</string>
    <string name="report_txtselect1">From</string>
    <string name="report_txtselect2">To</string>
    <string name="report_sumtotal">TOTAL</string>
		<string name="report2">REPORT</string>
</resources>