<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ngoc_menu_button_notradius"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="32dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnReportsale"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="12sp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
             android:textColor="#FFFFFF"
             android:textStyle="bold"
             android:drawableLeft="@drawable/icon_revenue"
             android:paddingLeft="10dp"
            android:background="@drawable/ngoc_header_button"
            android:text="@string/report_btn1" />

        <Button
            android:id="@+id/btnReportsale_payment"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
             android:textColor="#FFFFFF"
             android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:drawableLeft="@drawable/icon_income"
            android:background="@drawable/ngoc_header_button"
            android:textSize="12sp"
            android:text="@string/report_btn2" />

        <Button
            android:id="@+id/btnReportItems"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
             android:textColor="#FFFFFF"
             android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:drawableLeft="@drawable/icon_rfood"
            android:background="@drawable/ngoc_header_button"
            android:layout_weight="1"
            android:textStyle="bold"
            android:paddingLeft="10dp"
             android:textSize="12sp"
            android:text="@string/report_btn3" />

        <Button
            android:id="@+id/btnReportInv"
            android:layout_width="59dp"
            android:layout_height="match_parent"
            android:background="@drawable/ngoc_header_button"
            android:drawableLeft="@drawable/footer_destroy"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:paddingLeft="16dp"
            android:textColor="#FFFFFF"
            android:textSize="10sp"
            android:textStyle="bold" />

    </LinearLayout>
    <TextView 
        android:id="@+id/txtTitle_Report"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Report"
        android:textSize="15sp"
        android:textColor="#fff"
        android:gravity="center"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:layout_weight="7"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/report_txtselect"
            android:textColor="#fff"
            android:textSize="10sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_txtselect1"
            android:textColor="#fff"
            android:textSize="10sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtdate_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:textColor="#fff"
             android:hint="YYYY/MM/DD" />

        <ImageView
            android:id="@+id/imgvCalendarfrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_gravity="left"
            android:src="@drawable/iconcalendar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_txtselect2"
            android:textSize="10sp"
            android:textColor="#fff"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtdate_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff"
             android:textSize="10sp"
            android:hint="YYYY/MM/DD" />

        <ImageView
            android:id="@+id/imgvCalendarto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:src="@drawable/iconcalendar" />

        <Button
            android:id="@+id/btnReport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:textSize="10sp"
             android:padding="8dp"
             android:textStyle="bold"
             android:textColor="#fff"
             android:background="@drawable/ngoc_header_button"
            android:text="@string/report2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:layout_weight="3"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:background="#E6D7B4"
            android:gravity="center|top"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvIndex"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:gravity="center"
                android:text="STT"
                android:textColor="#000"
                android:textSize="10sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#D2B18F" />

            <TextView
                android:id="@+id/tvDate_Name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="Ngay thang"
                android:textColor="#000"
                android:textSize="10sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#D2B18F" />

            <TextView
                android:id="@+id/txtPrice1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="Tong hoa don"
                android:textColor="#000"
                android:textSize="10sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#D2B18F" />

            <TextView
                android:id="@+id/tvPrice2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="Tong gia tri"
                android:textColor="#000"
                android:textSize="10sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#D2B18F" />

            <TextView
                android:id="@+id/tvResult"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="Trung binh"
                android:textColor="#000"
                android:textSize="10sp"
                android:textStyle="bold" />
        </LinearLayout>

        <ListView
            android:id="@+id/listReportSale"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:dividerHeight="0.5dip" >
        </ListView>
        <!-- android:divider="#FFF" -->
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_weight="7.5"
        android:background="#E6D7B4"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:gravity="center"
            android:textColor="#000"
            android:textSize="10sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtTotalInvoice"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/report_sumtotal"
            android:textColor="#000"
            android:textSize="10sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtSumSale"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="0"
            android:textColor="#000"
            android:textSize="10sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtSumValue"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="0.0"
            android:textColor="#000"
            android:textSize="10sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtPayfor"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text=""
            android:textColor="#000"
            android:textSize="10sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>