<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ngoc_menu_button_notradius"
    android:orientation="vertical"
    tools:context=".GridViewMapFloor1" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnVegetSlideActivityFood"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/ngoc_header_button"
            android:drawableTop="@drawable/ngoc_food1"
            android:paddingLeft="15dp"
            android:paddingTop="10dp"
            android:text="@string/food"
            android:textColor="#FFF"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnVegetSlideActivityWine"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/ngoc_header_button"
            android:drawableTop="@drawable/ngoc_wine1"
            android:paddingTop="10dp"
            android:text="@string/drinks"
            android:textColor="#FFF"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnVegetSlideActivityBeverages"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/ngoc_header_button"
            android:drawableTop="@drawable/ngoc_vegatable1"
            android:paddingTop="5dp"
            android:text="@string/coffe"
            android:textColor="#FFF"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/btnVegetSlideActivityOk"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/ngoc_header_button"
                android:src="@drawable/ngoc_ok" />

            <ImageButton
                android:id="@+id/btnVegetSlideActivityClose"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/ngoc_header_button"
                android:src="@drawable/ngoc_close" />
        </LinearLayout>
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/gridVegetableSliActivityItemSlide"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:background="#000"
        android:gravity="center" >
    </android.support.v4.view.ViewPager>

    <LinearLayout
        android:id="@+id/gallery_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4.5"
        android:background="#0856BE"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone" >

        <ImageView
            android:id="@+id/left_arrow_imageview"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5" />

        <Gallery
            android:id="@+id/galleryCateVegetItemSliActivityItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spacing="30dip" />

        <ImageView
            android:id="@+id/right_arrow_imageview"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5" />
    </LinearLayout>

</LinearLayout>